task13.1/1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stage
  labels:
    app: backend
  name: frontend-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: perovss/frontend
          name: frontend
          ports:
            - containerPort: 80
        - image: perovss/backend
          name: backend
          ports:
            - containerPort: 9000
      restartPolicy: Always
