task13.1/1/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: stage
  name: db
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres:13-alpine
        name: db
        ports:
        - containerPort: 5432
