task13.1/1/service_db.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: stage
  labels:
    app: db
  name: db
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    app: db
  type: ClusterIP
