task13.1/1/service_front.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: backend
  name: frontend
  namespace: stage
spec:
  ports:
  - name: frontend
    port: 8000
    targetPort: 80
  selector:
    app: backend
  type: ClusterIP
